Issue #2090543 by yanniboi: Moved pattern to path in instagram_block.routing.yml.

--- a/instagram_block.routing.yml
+++ b/instagram_block.routing.yml
@@ -1,6 +1,6 @@
 
 block_admin_config_form:
-  pattern: '/admin/config/content/instagram_block'
+  path: '/admin/config/content/instagram_block'
   defaults:
     _form: 'Drupal\instagram_block\Form\InstagramBlockForm'
   requirements:
