--- a/instagram_block.info.yml
+++ b/instagram_block.info.yml
@@ -6,5 +6,5 @@ version: VERSION
 core: 8.x
 dependencies:
   - block
-configure: admin/config/content/instagram_block
+configure: instagram_block.admin
 
