--- a/instagram_block.routing.yml
+++ b/instagram_block.routing.yml
@@ -1,7 +1,7 @@
-
-block_admin_config_form:
+instagram_block.admin:
   path: '/admin/config/content/instagram_block'
   defaults:
     _form: 'Drupal\instagram_block\Form\InstagramBlockForm'
+    _title: 'Configure Instagram Account'
   requirements:
     _permission: 'administer site configuration'
