Issue #2763841 by kamalrajsahu21, naveenvalecha: Add a dedicated permission administer instagram block instead of global administer site configuration block

--- a/instagram_block.routing.yml
+++ b/instagram_block.routing.yml
@@ -4,4 +4,4 @@ instagram_block.admin:
     _form: 'Drupal\instagram_block\Form\InstagramBlockForm'
     _title: 'Configure Instagram Account'
   requirements:
-    _permission: 'administer site configuration'
+    _permission: 'administer site configuration+administer instagram block'
